# BangCore

./: CMakeLists.txt
include/BangCore/: Array.h  Array.tcc  Asset.h  Chrono.h  Containers.h  EventEmitter.h  File.h  FileTracker.h  IEventsDestroy.h  List.h  List.tcc  MetaAttribute.h  MetaNode.h  Path.h  Serializable.h  StackAndValue.h  String.h  Thread.h  ThreadPool.h  Timer.h  TypeMap.h  Types.h  UMap.h  UMap.tcc
src/: Serializable.cpp
